# learnopengl

./: .gitignore  CMakeLists.txt
include/: shader.h
include/glad/: glad.h
src/: 3_Hello Triangle Exercise 1.cpp  3_Hello Triangle Exercise 3.cpp  4_Uniform.cpp  9_Colors.cpp  Camera.cpp  Coordinate Systems.cpp  Hello Rectangle.cpp  Hello Triangle Exercise 2.cpp  Hello Window.cpp  Learn OpenGL.md  Texture.cpp  Transformation.cpp  Uniform.cpp  glad.c  main.cpp  shader.cpp
src/basic_lighting/: basic_lighting.cpp  basic_lighting.frag  basic_lighting.vert
src/camera/: camera.cpp  camera.frag
src/colors/: colors.cpp
